k8s/whispr/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whispr-dev
  labels:
    environment: development
